--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: James E. Stine, Jr's homepage
+description: Bookmark this to keep an eye on our project updates!
