--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: James E. Stine, Jr's homepage
+title: Oklahoma State Skywater Technology VLSI Tools
 description: Bookmark this to keep an eye on our project updates!
