--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ highlighter: rouge
 #
 title : simple site
 author :
-  name : Karl Broman
-  email : kbroman@gmail.com
-  github : kbroman
-  twitter : kwbroman
+  name : James E. Stine, Jr.
+  email : james.stine@okstate.edu
+  github : stineje
+  twitter : JamesStineJr
   feedburner : nil
 
 # NOTE: Replacing this next line with your own URL
