--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : simple site
+title : Oklahoma State University VLSI Tools for Skywater 130 Technology
 author :
   name : James E. Stine, Jr.
   email : james.stine@okstate.edu
